--- a/style.css
+++ b/style.css
@@ -1,60 +1,159 @@
 @font-face {
     font-family: 'ritz';
-    src: url(./assets/fonts/RitzyNormal.ttf) format('truetype');
+    src: url(assets/fonts/RitzyNormal.ttf) format('truetype');
+}
+
+@font-face {
+    font-family: 'playbill';
+    src: url(assets/fonts/Playbill.ttf) format('truetype');
 }
 
 .bg {
-    background-image: url("./assets/images/badbg.jpg");
+    background-image: url("./assets/images/curtain.jpg");
     background-size: cover;
-    height: 100vh;
-    background-position-y: 25%;
-    background-position-x: 50%;
     font-family: ritz;
+    background-attachment: fixed;
 }
 
 .nav {
     background-image: url("./assets/images/keys.jpg");
     background-position-y: 60%;
+    position: fixed;
+    z-index: 99;
+    width: 100%;
 }
 
-.nav a{
+.nav a {
     text-decoration: none;
     color: white;
     text-shadow: 2px 2px black;
     font-size: 1.7rem;
 }
 
-.nav a:hover{
+.nav a:hover {
     text-decoration: none;
     color: black;
     text-shadow: 2px 2px white;
     font-size: 1.7rem;
+    transition: color 0.5s ease;
 }
 
-.nav li{
+.nav li {
     background-color: rgb(53, 53, 53);
     opacity: 0.9;
     margin: 0.5rem 1rem;
     border: 1px solid white;
-    border-bottom-color:  rgb(53, 53, 53)
+    border-bottom-color: rgb(53, 53, 53);
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
 }
 
-.nav li:hover{
+.nav li:hover {
     background-color: rgb(255, 255, 255);
     opacity: 0.9;
     border: 1px solid black;
-   
+
+}
+
+.welcome {
+    background-image: linear-gradient(maroon, white);
+    border-radius: 10px;
+    opacity: 0.9;
+
 }
 
 .content {
     text-align: center;
+    padding-top: 5rem;
 }
 
 .content h1 {
-    font-size: 3rem;
-
+    font-size: 3.5rem;
+    text-shadow: 2px 2px white;
 }
 
 .content h2 {
     font-size: 2rem;
+    text-shadow: 2px 2px white;
+}
+
+.content h3 {
+    color: white;
+    text-shadow: 2px 2px black;
+
+}
+
+.map {
+    border: 3px solid white;
+    border-radius: 1rem;
+    height: 35rem;
+    background-color: #666;
+    opacity: 0.9;
+    margin-top: 1rem;
+}
+
+#map{
+    height: 30rem;
+    width: 30rem;
+    margin: auto;
+}
+
+.menu {
+    border: 3px solid white;
+    border-radius: 1rem;
+    background-color: #666;
+    opacity: 0.9;
+    margin-top: 1rem;
+    overflow: hidden;
+}
+
+.menu h3 {
+    background: yellow;
+    color: black;
+    font-family: "playbill";
+    font-size: 3.5rem;
+    text-shadow: none;
+    width: 50%;
+    border: 1px solid black;
+    margin: auto;
+}
+
+.menu ul {
+    margin: auto;
+    width: 50%;
+    list-style-type: none;
+    background-color: white;
+    font-family: 'Times New Roman', Times, serif;
+
+}
+
+.menu li {
+    font-size: 2rem;
+}
+
+.book {
+    border: 3px solid white;
+    border-radius: 1rem;
+    height: 20rem;
+    background-color: #666;
+    opacity: 0.9;
+    margin-top: 1rem;
+}
+
+.contact {
+    border: 3px solid white;
+    border-radius: 1rem;
+    height: 20rem;
+    background-color: #666;
+    opacity: 0.9;
+    margin-top: 1rem;
+}
+
+.about {
+    border: 3px solid white;
+    border-radius: 1rem;
+    height: 20rem;
+    background-color: #666;
+    opacity: 0.9;
+    margin-top: 1rem;
 }
