--- a/style.css
+++ b/style.css
@@ -86,16 +86,28 @@
 .map {
     border: 3px solid white;
     border-radius: 1rem;
-    height: 35rem;
+    overflow: hidden;
     background-color: #666;
     opacity: 0.9;
     margin-top: 1rem;
 }
 
-#map{
+.map p {
+    color: white;
+    text-shadow: 2px 2px black;
+    font-size: 1.2rem;
+}
+
+.map li {
+    color: white;
+    list-style-type: none;
+}
+
+#map {
     height: 30rem;
     width: 30rem;
     margin: auto;
+    margin-bottom: 1rem;
 }
 
 .menu {
@@ -116,6 +128,7 @@
     width: 50%;
     border: 1px solid black;
     margin: auto;
+    margin-top: 1rem;
 }
 
 .menu ul {
@@ -131,29 +144,43 @@
     font-size: 2rem;
 }
 
-.book {
-    border: 3px solid white;
-    border-radius: 1rem;
-    height: 20rem;
-    background-color: #666;
-    opacity: 0.9;
-    margin-top: 1rem;
-}
-
 .contact {
     border: 3px solid white;
     border-radius: 1rem;
-    height: 20rem;
+    overflow: hidden;
     background-color: #666;
     opacity: 0.9;
     margin-top: 1rem;
+    text-align: center;
+    color: white;
+    text-shadow: 2px 2px black;
+}
+
+.contact #datepicker {
+    font-family: 'Times New Roman', Times, serif;
+}
+
+.contact p {
+    font-family: 'Times New Roman', Times, serif;
+}
+
+.contact #submit {
+    margin-bottom: 1rem;
 }
 
 .about {
     border: 3px solid white;
     border-radius: 1rem;
-    height: 20rem;
+    height: 10rem;
     background-color: #666;
     opacity: 0.9;
     margin-top: 1rem;
+}
+
+.about p {
+    color: white;
+    text-shadow: 1px 1px black;
+    font-size: 1.2rem;
+    text-align: center;
+    font-family: 'Times New Roman', Times, serif;
 }
