--- a/style.css
+++ b/style.css
@@ -9,18 +9,17 @@
 }
 
 .bg {
-    background-image: url("./assets/images/curtain.jpg");
-    background-size: cover;
+    background-image: url("./assets/images/skyline.jpeg");
+    background-position-y: 50%;
+    background-position-x: 50%;
     font-family: ritz;
     background-attachment: fixed;
 }
 
 .nav {
-    background-image: url("./assets/images/keys.jpg");
-    background-position-y: 60%;
-    position: fixed;
     z-index: 99;
     width: 100%;
+    background-image: linear-gradient(to bottom right, indianred, rgb(70, 31, 31), indianred);
 }
 
 .nav a {
@@ -55,26 +54,20 @@
 
 }
 
-.welcome {
-    background-image: linear-gradient(maroon, white);
-    border-radius: 10px;
-    opacity: 0.9;
-
-}
-
 .content {
     text-align: center;
-    padding-top: 5rem;
+    padding-top: 2rem;
 }
 
 .content h1 {
-    font-size: 3.5rem;
-    text-shadow: 2px 2px white;
+    font-size: 5rem;
+    text-shadow: 2px 2px darkgrey;
 }
 
 .content h2 {
     font-size: 2rem;
-    text-shadow: 2px 2px white;
+    text-shadow: 1px 1px white;
+    font-family: serif;
 }
 
 .content h3 {
@@ -116,6 +109,7 @@
     background-color: #666;
     opacity: 0.9;
     margin-top: 1rem;
+    padding-bottom: 1rem;
     overflow: hidden;
 }
 
@@ -164,14 +158,15 @@
     font-family: 'Times New Roman', Times, serif;
 }
 
-.contact #submit {
-    margin-bottom: 1rem;
+#form p {
+    display: flex;
+    justify-content: center;
+    font-family: 'Times New Roman', Times, serif;
 }
 
 .about {
     border: 3px solid white;
     border-radius: 1rem;
-    height: 10rem;
     background-color: #666;
     opacity: 0.9;
     margin-top: 1rem;
