--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ body {
     margin: 0;
     padding-top: 0.5rem;
     font-family: serif;
-   }
+}
 
 .fab {
 
@@ -96,7 +96,7 @@ body {
 .map {
     overflow: hidden;
     margin: 1rem;
-    
+
 }
 
 .map p {
@@ -148,7 +148,7 @@ body {
     width: 90%;
     list-style-type: none;
     background-color: white;
-   
+
 
 }
 
@@ -159,22 +159,18 @@ body {
 .contact {
     margin: auto;
     width: 50%;
-    border: 3px solid white;
-    border-radius: 1rem;
-    overflow: hidden;
-    background-color: #666;
-    opacity: 0.9;
     margin-top: 1rem;
     text-align: center;
     color: white;
     text-shadow: 2px 2px black;
+    font-size: 1.2rem;
 }
 
 
 #form p {
     display: flex;
     justify-content: center;
-    
+
 }
 
 .about {
@@ -188,5 +184,5 @@ body {
     text-shadow: 1px 1px black;
     font-size: 1.2rem;
     text-align: center;
-   
+
 }
